--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-cors-headers = "^4.3.0"
 psycopg2-binary = "^2.9.9"
 gunicorn = "^21.2.0"
 setuptools = "^69.0.2"
+loguru = "^0.7.2"
 
 
 [build-system]
