--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -5,12 +5,12 @@ events { worker_connections 1024; }
 http {
     sendfile on;
 
-    upstream web {
-        server web:8000;
+    upstream backend {
+        server backend:8000;
     }
 
     server {
-        listen 90;
+        listen 80;
         server_name _;
 
         location /media {
@@ -18,7 +18,7 @@ http {
         }
 
         location / {
-            proxy_pass http://web/;
+            proxy_pass http://backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
