--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 80;
-        server_name _;
+        server_name 159.89.169.153;
 
         location /media {
             alias /media/;
