--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -16,6 +16,9 @@ http {
         location /media {
             alias /media/;
         }
+        location /static {
+            alias /static/;
+        }
 
         location / {
             proxy_pass http://backend/;
