--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -18,6 +18,10 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # Ensure that Nginx doesn't try to serve static files
+            proxy_intercept_errors on;
+            error_page 404 =200 /index.html;
         }
     }
 }
