upd/change volumes

--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -1,6 +1,8 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
     sendfile on;
@@ -11,17 +13,21 @@ http {
 
     server {
         listen 80;
-        server_name 159.89.169.153;
+        server_name _;
+        
+        location /static/ {
+        alias /app/static/;
+        }
+
+        location /media/ {
+            alias /app/media/;
+        }
 
         location / {
             proxy_pass http://backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            # Ensure that Nginx doesn't try to serve static files
-            proxy_intercept_errors on;
-            error_page 404 =200 /index.html;
         }
     }
 }
