--- a/core/nginx.conf
+++ b/core/nginx.conf
@@ -15,6 +15,11 @@ http {
         listen 80;
         server_name _;
         
+        index index.html;
+
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+
         location /static/ {
         alias /app/static/;
         }
@@ -22,12 +27,14 @@ http {
         location /media/ {
             alias /app/media/;
         }
+        server_tokens off;
 
-        location / {
+        location /backend/ {
             proxy_pass http://backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_hide_header X-Powered-By;
         }
     }
 }
